src/objects/Bank_Statement__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Balance__c</fullName>
        <label>End Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Bank Statements</relationshipLabel>
        <relationshipName>Bank_Statements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Balance__c</fullName>
        <label>GL Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Statement_Balance__c</fullName>
        <label>Statement Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Bank Statement</label>
    <nameField>
        <displayFormat>BankStat-{0000000}</displayFormat>
        <label>Bank Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>